# frida-game-hacking-mcp

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: bypass_license_check.md  custom_script_rpc.md  infinite_health.md
src/frida_game_hacking_mcp/: __init__.py  __main__.py  server.py
test_game/: README.md  automated_test.py  full_demo.py  hackme.py  poc_demo.py  test_game.py
